# Cartonnage

./: AKE.py  DataLayer.py  LICENSE  README.md  _tables.py  _tables_columns.py  ake_cartonnage.py  ake_layer.php  ake_layer.py  ake_online_comments.py  ake_online_new.py  ake_online_query.php  ake_online_query.py  architecture.txt  cartonnage.py  cartonnage_test.py  departments_demo.py  employees_demo.py  entity_class.py  entity_class_php.py  git_filter_repo_replacement.md  hr.db  hr.sql
ake_online/: ake_online.php  ake_online.py  ake_online_comments.py  ake_online_query.py
cartonnage/: README.md  ake_cartonnage.py  ake_connections.py  cartonnage_test.py  demo.py  demo1.py  departments_demo.py  employees_demo.py  hr.db  pyproject.toml
cartonnage/benchmark/: benchmark.db  run_each.py  schema.py  settings.py
cartonnage/benchmark/cartonnage_bench/: models.py  transactions.py
cartonnage/benchmark/pony_bench/: models.py  transactions.py
cartonnage/benchmark/sqlalchemy_bench/: models.py  transactions.py
cartonnage/hr/: hr.db  hr.py
docs/: index.html  robots.txt  sitemap.xml
hr/: hr.sql  hr_mysql_postgres_azuresql.sql  hr_oracle.sql
