[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartonnage"
version = "0.1.7"
description = "Cartonnage is a Database-First ORM—designed as a 'Live Database Reflection ORM' or 'Record Reflection Layer (RRL)'—that reflects your existing database at runtime, speaking its schema fluently: not model-first, not schema-first, but runtime-bound, making it the ORM for existing databases."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Ahmed Kamal ELSamman", email = "ak.elsaman@gmail.com" }
]
keywords = ["orm", "database", "sqlite", "mysql", "postgresql", "oracle", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]

[project.optional-dependencies]
mysql = ["mysql-connector-python"]
postgres = ["psycopg2-binary"]
oracle = ["oracledb"]
mssql = ["pyodbc"]
all = ["mysql-connector-python", "psycopg2-binary", "oracledb", "pyodbc"]

[project.urls]
Homepage = "https://cartonnage-orm.com"
Repository = "https://github.com/akelsaman/Cartonnage"

[tool.setuptools]
py-modules = ["cartonnage"]
